fixed overflow issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-    overflow-x: hidden;
 }
 
 hr {
@@ -19,7 +18,7 @@ svg {
     fill: var(--default-icon-color);
 }
 body:has(dialog[open]) {
-    overflow: hidden
+    overflow: hidden;
 }
 
 #static-background {
@@ -41,6 +40,7 @@ body:has(dialog[open]) {
 }
 
 #posts-box {
+    overflow-y: hidden;
     width: 100%;
 
     min-height: 100vh;
@@ -657,6 +657,7 @@ body:has(dialog[open]) {
 }
 
 .profile-page-background {
+    overflow-y: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
